--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.url= jdbc:mysql://127.0.0.1:3306/boostcom
+spring.datasource.username=root
+spring.datasource.password=bazatadanni122
 
+spring.jpa.hibernate.ddl-auto=create-drop
+server.port=8000
