--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,10 @@ spring.datasource.url= jdbc:mysql://127.0.0.1:3306/boostcom
 spring.datasource.username=root
 spring.datasource.password=bazatadanni122
 
-spring.jpa.hibernate.ddl-auto=create-drop
-server.port=8000
+spring.jpa.hibernate.ddl-auto=create
+server.port=8001
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.generate-ddl=true
+
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
